# langgraph-temporal

./: .env.ci  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: DESIGN.md  REQUIREMENTS.md  index.md
docs/getting-started/: installation.md  quickstart.md
docs/guides/: activity-tools.md  concepts.md  encryption.md  human-in-the-loop.md  large-payloads.md  metrics.md  streaming.md  worker-affinity.md
docs/reference/: checkpoint.md  codec.md  config.md  encryption.md  graph.md  metrics.md  streaming.md  tools.md  worker.md
langgraph/temporal/: __init__.py  _codec.py  _serde.py  activities.py  checkpoint.py  config.py  converter.py  encryption.py  graph.py  metrics.py  streaming.py  tools.py  worker.py  workflow.py
tests/: conftest.py  test_activities.py  test_checkpoint.py  test_codec.py  test_config.py  test_converter.py  test_e2e.py  test_encryption.py  test_graph.py  test_integration.py  test_metrics.py  test_serde.py  test_streaming.py  test_tools.py  test_worker.py  test_workflow.py
